{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 11,
  "lineage": "09e0e751-3d7e-e787-d960-d69fedd87b3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1660b0552ca64f3",
            "association_id": "eipassoc-0a3b12387bc6aadd7",
            "domain": "vpc",
            "id": "eipalloc-0d1660b0552ca64f3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0744e037c23b50c14",
            "private_dns": "ip-10-0-2-4.ec2.internal",
            "private_ip": "10.0.2.4",
            "public_dns": "ec2-52-70-84-131.compute-1.amazonaws.com",
            "public_ip": "52.70.84.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_nat_eip"
            },
            "tags_all": {
              "Name": "demo_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109106954009:internet-gateway/igw-0f8e97e1bfc6d319c",
            "id": "igw-0f8e97e1bfc6d319c",
            "owner_id": "109106954009",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0aa6082ca42ffebc7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1660b0552ca64f3",
            "connectivity_type": "public",
            "id": "nat-081dfbff71e0c59d0",
            "network_interface_id": "eni-0744e037c23b50c14",
            "private_ip": "10.0.2.4",
            "public_ip": "52.70.84.131",
            "subnet_id": "subnet-074353c18f4b7af3c",
            "tags": {
              "Name": "demo Natgateway"
            },
            "tags_all": {
              "Name": "demo Natgateway"
            }
          },
          "dependencies": [
            "aws_eip.demo_nat_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109106954009:route-table/rtb-0804d81f9e34a339f",
            "id": "rtb-0804d81f9e34a339f",
            "owner_id": "109106954009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-081dfbff71e0c59d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-private-rt"
            },
            "tags_all": {
              "Name": "demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa6082ca42ffebc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.demo_natgateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109106954009:route-table/rtb-0e87b0e79054ea539",
            "id": "rtb-0e87b0e79054ea539",
            "owner_id": "109106954009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8e97e1bfc6d319c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-rt"
            },
            "tags_all": {
              "Name": "demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa6082ca42ffebc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-private-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04954a53850dfc09d",
            "route_table_id": "rtb-0804d81f9e34a339f",
            "subnet_id": "subnet-00e50a1d0b48ed761"
          },
          "dependencies": [
            "aws_nat_gateway.demo_natgateway",
            "aws_route_table.demo_private_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f65612d521a51b2",
            "route_table_id": "rtb-0e87b0e79054ea539",
            "subnet_id": "subnet-074353c18f4b7af3c"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.demo_public_rt"
          ]
        }
      ]
    }
  ]
}